# joatolyesi.com

./: .env.example  BRIEF.md  CLAUDE.md  DEPLOY.md  Dockerfile  LAUNCH.md  PRELAUNCH_CHECKLIST.md  README.md  TODO.md  WAITLIST_GROWTH.md  alembic.ini  compose.yml  index.html  old_index.html  pyproject.toml
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_profiles.py  0003_disciplines.py  0004_email_verification.py  0005_follows.py  0006_posts.py  0007_reminders.py  0008_kata_kind.py  0009_referral_kata_slug_push.py  0010_user_referral.py  0011_rest_day.py
app/: avatar.py  badges.py  card.py  config.py  constants.py  db.py  deps.py  guide_content.py  mail.py  main.py  markdown_utils.py  models.py  push.py  rate_limit.py  render.py  security.py  seed.py  stats.py  tips_content.py
app/i18n/: strings.py
app/routers/: admin.py  auth.py  billing.py  blog.py  guide.py  kata.py  landing.py  practice.py  profile.py  programs.py  push.py
app/static/: manifest.webmanifest  offline.html  sw.js
app/templates/: 404.html  _badges.html  _belt_svg.html  _heatmap.html  _practice_panel.html  _share_controls.html  admin_docs.html  admin_index.html  admin_katas.html  admin_user_detail.html  admin_users.html  admin_waitlist.html  base.html  billing.html  blog_form.html  blog_list.html  blog_post.html  dashboard.html  forgot.html  guide_discipline.html  guide_index.html  index.html  kata_detail.html  kata_list.html  login.html  practitioners.html  privacy.html  profile_edit.html  profile_public.html  program_day.html  program_detail.html  program_list.html  register.html  reset.html  resources.html  (+2 more)
scripts/: backfill_practice.py  backup.sh  generate_share_image.py  generate_vapid_keys.py  seed_blog.py  send_invites.py  send_reminders.py  send_weekly_digest.py
tests/: conftest.py  test_flows.py  test_unit.py
(+6 files in other folders)
