[project]
name = "joryu"
version = "0.1.0"
description = "Joryu — practice tracking platform for solo martial artists (Phase 0: landing + waitlist)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
    "email-validator>=2.2",
    "bcrypt>=4.2",
    # E-posta gönderimi (Resend API) — async, route'u bloklamaz
    "httpx>=0.27",
]

[tool.setuptools]
packages = ["app"]
